# LinkX-TokenTon26

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mint_keypair.json  AGENT_STATUS.md  Dockerfile  README.md  SOLANA_INTEGRATION_DETAILS.md  SOLANA_MIGRATION_COMPLETE.md  SOLANA_QUICK_REFERENCE.md  STARTUP_GUIDE.md  TRANSACTION_LOGGING.md  diagnose.sh  docker-compose.demo-nodes.yml  docker-compose.nodes.yml  docker-compose.yml  force_long_situations.sh  force_short_situations.sh  mint_tokens.sh  mint_tokens.ts  package.json  start_agent.sh  start_all.sh  start_demo_providers.sh  start_nodes.sh  test_demo_providers.js
abi/: twctc.ts  usdc.ts  vvsfactory.ts  vvspair.ts  vvsrouter.ts  wctc.ts
agent/: .env.etherlink  .gitignore  Dockerfile  MAINNET_README.json  QUICK_REFERENCE.txt  agent-keypair.json  agent_state_db.py  api.py  api_status.py  autonomous_loop.py  brain.py  check_override_status.sh  daily_spend.json  data_consumer.py  data_pipeline.py  debug_usdc_balance.py  docker-compose.yml  emergency_stop.sh  final_swap_execution.py  force_aggressive.sh  force_conservative.sh  force_short_only.sh  free_intel.py  main.py  node_connector.py  package.json  pytest.ini  (+11 more)
contract/: Anchor.toml  Cargo.toml  base58_to_keypair.py  check_and_add_liquidity.py  id.json  mint_usdc.py  mint_wctc.py  mint_wsol.py
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: lib.rs
contract/programs/vvs_swap/: cargo.toml
contract/programs/vvs_swap/src/: lib.rs
contract/programs/wrapped_token/: cargo.toml
contract/programs/wrapped_token/src/: lib.rs
(+113 files in other folders)
