[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"

[workspace.lints.clippy]
too_many_arguments = "allow"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
